Fixing table margin, implemented step.text as table

--- a/behave_html_pretty_formatter/theme.css
+++ b/behave_html_pretty_formatter/theme.css
@@ -273,7 +273,7 @@ thead {
 }
 table {
   color: #333;
-  margin: 0.1rem 0 0.2rem 1rem;
+  margin: 0.2rem 1rem;
   border-collapse: collapse;
   border: 1px solid black;
   text-align: left;
