--- a/behave_html_pretty_formatter/theme.css
+++ b/behave_html_pretty_formatter/theme.css
@@ -235,7 +235,7 @@ header {
 
 /*EMBED CONTENT*/
 .messages {
-  margin: 1px 0 10px 15px
+  margin: 0 0 10px 15px
 }
 .scenario-capsule .messages.contrast:last-child {
   border-bottom: 1px dashed #fff;
