--- a/behave_html_pretty_formatter/theme.css
+++ b/behave_html_pretty_formatter/theme.css
@@ -8,14 +8,17 @@ body {
   padding: 0;
   color: #333;
 }
+
 body {
   padding: 1rem 1rem;
   font-size: 0.85rem;
 }
+
 header {
   display: flex;
   align-items: center;
 }
+
 #title {
   margin: 0;
   flex-grow: 1;
@@ -28,46 +31,56 @@ header {
   display: flex;
   font-size: 1rem;
 }
-#summary > div {
+
+#summary>div {
   margin-right: 2rem;
   background: #eee;
   padding: 1rem;
   min-width: 15rem;
 }
-#summary > div:last-child {
+
+#summary>div:last-child {
   margin-right: 0;
 }
+
 @media only screen and (max-width: 720px) {
   #summary {
     flex-direction: column;
   }
-  #summary > div {
+
+  #summary>div {
     margin-right: 0;
     margin-top: 2rem;
   }
-  #summary > div:first-child {
+
+  #summary>div:first-child {
     margin-top: 0;
   }
 }
+
 .summary-total {
   font-weight: bold;
   margin-bottom: 0.5rem;
 }
+
 .summary-passed {
   color: #4f8a10;
   border-left: 0.4rem solid #4f8a10;
   padding-left: 0.5rem;
 }
+
 .summary-failed {
   color: #d8000c;
   border-left: 0.4rem solid #d8000c;
   padding-left: 0.5rem;
 }
+
 .summary-skipped {
   color: #9f6000;
   border-left: 0.4rem solid #ffdf61;
   padding-left: 0.5rem;
 }
+
 .summary-empty {
   color: #999;
   border-left: 0.4rem solid #999;
@@ -87,26 +100,31 @@ header {
   flex-grow: 0.5;
   font-size: 1rem;
 }
+
 .feature-icon-name-container {
   display: flex;
 }
+
 .feature-panel-icon {
-  height:1.2rem;
+  height: 1.2rem;
   margin: 0 0.3rem 0 0;
   align-items: center;
   text-align: center;
   vertical-align: middle;
 }
+
 .feature-panel.contrast {
   font-weight: bold;
   font-size: 1.25rem;
   background-color: #000;
   color: #fff;
 }
+
 .feature-timestamp {
   padding-left: 1rem;
   display: flex;
 }
+
 .feature-container {
   margin-bottom: 2rem;
 }
@@ -118,27 +136,34 @@ header {
   margin-bottom: 0.5rem;
   color: black;
 }
+
 .scenario-capsule.contrast {
   background-color: #000;
   color: #fff;
 }
+
 .scenario-capsule:last-child {
   border: 0;
 }
+
 .scenario-capsule-passed {
   background-color: #dff2bf;
 }
+
 .scenario-capsule-failed {
   background-color: #f5c9cd;
 }
+
 .scenario-capsule-undefined {
   background-color: #ffdf61;
 }
+
 .scenario-info {
   display: flex;
   justify-content: space-between;
   font-size: 1.25rem;
 }
+
 .scenario-name {
   width: 50%;
   text-align: left;
@@ -146,27 +171,32 @@ header {
   word-break: break-word;
   padding-bottom: 0.5rem;
 }
+
 .scenario-duration {
   text-align: right;
   font-size: 0.75rem;
   font-style: italic;
   padding: 0 0.5rem 0 0;
 }
+
 .scenario-duration.contrast {
   font-size: 1.25rem;
   color: #fff;
 }
+
 .scenario-tags {
   color: #333;
   font-weight: bold;
   font-size: 0.75rem;
   margin: 0.1rem 0 0.5rem 0;
 }
+
 .scenario-tags.contrast {
   color: white;
   font-weight: bold;
   font-size: 1rem;
-  margin: 0.1rem 0 0.5rem 0;
+  margin: 0.1rem 1em 0.5rem 0;
+  display: inline-block;
 }
 
 
@@ -180,54 +210,67 @@ header {
   font-size: 0.75rem;
   justify-content: space-between;
 }
+
 .step-capsule.contrast {
   background-color: rgb(36, 35, 35);
   color: #fff;
   font-size: 1.25rem;
   border: none;
 }
-.step-capsule-passed{
+
+.step-capsule-passed {
   background-color: #c6dba3;
   border: 1px solid #b4cc8c;
 }
-.step-capsule-failed{
-  background-color: #ea868f;;
+
+.step-capsule-failed {
+  background-color: #ea868f;
+  ;
   border: 1px solid #dd7a82;
 }
+
 .step-capsule-undefined {
   background-color: #f1cb32;
   border: 1px solid #f1cb32;
 }
+
 .step-capsule-skipped {
   background-color: #cfe2ff;
   border: 1px solid #b8c9e4;
 }
+
 .step-capsule-commentary {
   background-color: #b9b9b9;
   margin: 0.2rem 0 0.2rem 1rem;
 }
+
 .step-status-decorator-duration-capsule {
   display: flex;
 }
+
 .step-status {
   text-align: left;
   display: none;
 }
+
 .step-status.contrast {
   width: 3rem;
   padding: 0 1rem 0 0;
   font-weight: bold;
   font-size: 1.25rem;
 }
+
 .step-decorator {
   padding: 0 1.5rem 0 0;
 }
+
 .step-duration {
   color: rgb(49, 49, 49);
   font-style: italic;
   text-align: left;
   padding: 0 0.5rem 0 0;
 }
+
 .step-duration.contrast {
   color: rgb(248, 248, 248);
 }
@@ -237,25 +280,32 @@ header {
 .messages {
   margin: 0 0 10px 15px
 }
+
 .scenario-capsule .messages.contrast:last-child {
   border-bottom: 1px dashed #fff;
 }
+
 .scenario-capsule-passed .messages:last-child {
   border-bottom: 1px dashed #4f8a10;
 }
+
 .scenario-capsule-failed .messages:last-child {
   border-bottom: 1px dashed #d8000c;
 }
+
 .scenario-capsule-undefined .messages:last-child {
   border-bottom: 1px dashed #9f6000;
 }
+
 .embed-capsule {
   margin-top: 1rem;
 }
-.embed_content{
+
+.embed_content {
   white-space: pre-wrap;
   word-wrap: break-word;
 }
+
 .embed_button {
   margin: 0 1rem 1rem 0;
   font-weight: bold;
@@ -263,6 +313,7 @@ header {
   color: #000;
   font-size: 1rem;
 }
+
 .embed_button.contrast {
   color: #fff;
   font-size: 1.25rem;
@@ -270,14 +321,17 @@ header {
 
 
 /*TABLE FORMATTING*/
-th, td {
+th,
+td {
   padding: 6px;
 }
+
 thead {
   background-color: #333;
   color: white;
   cursor: pointer;
 }
+
 table {
   color: #333;
   margin: 0.2rem 1rem;
@@ -286,9 +340,11 @@ table {
   text-align: left;
   vertical-align: middle;
 }
+
 tbody tr:nth-child(odd) {
   background-color: #fff;
 }
+
 tbody tr:nth-child(even) {
   background-color: #eee;
 }
@@ -299,14 +355,17 @@ img {
   max-width: 100%;
   max-height: 100%;
 }
+
 a {
   color: inherit;
   text-decoration: none;
 }
+
 .link a span:hover {
   text-decoration: underline;
   text-decoration-color: black;
 }
+
 .link.contrast a span:hover {
   color: grey;
   text-decoration: underline;
