separate pseudo steps in html by margin

--- a/behave_html_pretty_formatter/theme.css
+++ b/behave_html_pretty_formatter/theme.css
@@ -244,6 +244,14 @@ header {
   margin: 0.2rem 0 0.2rem 1rem;
 }
 
+.margin-top {
+  margin-top: 10px;
+}
+
+.margin-bottom {
+  margin-bottom: 10px;
+}
+
 .step-status-decorator-duration-capsule {
   display: flex;
 }
