--- a/behave_html_pretty_formatter/theme.css
+++ b/behave_html_pretty_formatter/theme.css
@@ -171,7 +171,7 @@ pre {
 
 .feature-summary-row {
   color: var(--feature-color);
-  border-left: 0.4rem solid var(--body-color);
+  border-left: 0.4rem solid var(--feature-color);
   padding-left: 0.5rem;
   margin: 1px;
 }
