--- a/behave_html_pretty_formatter/behave.css
+++ b/behave_html_pretty_formatter/behave.css
@@ -87,6 +87,24 @@ pre {
   margin: 0;
 }
 
+/*ARROWS*/
+.arrow {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+.up {
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+}
+
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
 /*FEATURE CONTENT*/
 .feature-panel {
   margin-bottom: 5px;
@@ -147,6 +165,20 @@ pre {
   font-size: 1rem;
 }
 
+.feature-additional-info-container {
+  padding: 5px;
+  background-color: var(--feature-bg);
+  color: var(--feature-color);
+  justify-content: start;
+  font-size: 0.8rem;
+}
+
+.feature-additional-info-container.contrast {
+  background-color: #000;
+  color:rgb(248, 248, 248);
+  font-size: 1rem;
+}
+
 
 @media only screen and (max-width: 720px) {
   .feature-panel {
@@ -154,6 +186,12 @@ pre {
   }
 
   .feature-summary-container {
+    margin-left: 0;
+    margin-top: 0.25rem;
+    font-size: 1rem;
+  }
+
+  .feature-additional-info-container {
     margin-left: 0;
     margin-top: 0.25rem;
     font-size: 1rem;
